--- a/frontend/login.html
+++ b/frontend/login.html
@@ -10,7 +10,7 @@
   <header class="header">
     <div class="header__body">
       <div class="container header__body-inner">
-        <a href="/" class="header__logo logo">ARCHAKOV BLOG</a>
+        <a href="/" class="header__logo logo">Xpage</a>
         <nav class="header__menu">
           <ul class="header__menu-list">
             <li><a href="register.html" class="button button--accent">Создать аккаунт</a></li>
