--- a/frontend/index.html
+++ b/frontend/index.html
@@ -877,12 +877,14 @@
       <header class="section__header">
         <div class="section__header-inner container">
           <div class="section__header-info">
-            <p class="section__subtitle tag">What Our Readers Say</p>
-            <h2 class="section__title" id="reviews-title">Real Words from Real Readers</h2>
+            <p class="section__subtitle tag">Что говорят наши читатели
+            </p>
+            <h2 class="section__title" id="reviews-title">Отзывы читателей</h2>
           </div>
           <div class="section__actions">
             <a class="section__link button" href="/">
-              <span class="icon icon--yellow-arrow">View All Testimonials</span>
+              <span class="icon icon--yellow-arrow">Просмотреть все отзывы
+              </span>
             </a>
           </div>
         </div>
