--- a/frontend/login.html
+++ b/frontend/login.html
@@ -20,7 +20,7 @@
     </div>
   </header>
 
-  <main class="section">
+  <main>
     <div class="container">
       <div class="card" style="max-width: 30rem; margin: 5rem auto; padding: 2rem; background-color: var(--color-dark-10); border-radius: 0.75rem;">
         <h1 class="h3" style="text-align: center; margin-bottom: 2rem;">Вход в аккаунт</h1>
