--- a/frontend/contacts.html
+++ b/frontend/contacts.html
@@ -205,7 +205,7 @@
               </div>
 
               <div class="card__body">
-                <form class="feedback-form" action="http://localhost:4444/submit-contact" method="POST">
+                <form id="contact-form" class="feedback-form" action="http://localhost:4444/submit-contact" method="POST">
                   <div class="feedback-form__cell field">
                     <label class="field__label" for="firstName">Имя <span class="field__required-star" aria-hidden="true">*</span></label>
                     <input
@@ -708,6 +708,6 @@
     </div>
   </footer>
 
-  <script src="/scripts/contact-form.js"></script>
+  <script src="/scripts/contact-form.js" defer></script>
 </body>
 </html>
