Fix bcrypt for Linux deployment

--- a/frontend/contacts.html
+++ b/frontend/contacts.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Контакты | Xpage</title>
   <link rel="stylesheet" href="./styles/main.css" />
-  <link rel="icon" href="/frontend/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/imask/7.6.1/imask.min.js" defer></script>
   <script src="./scripts/main.js" type="module"></script>
 </head>
