--- a/frontend/index.html
+++ b/frontend/index.html
@@ -292,7 +292,7 @@
           </div>
           <div class="section__actions">
             <a class="section__link button" href="./blog.html">
-              <span class="icon icon--yellow-arrow">Смотреть все блоги</span>
+              <span class="icon icon--yellow-arrow">Смотреть все статьи</span>
             </a>
           </div>
         </div>
@@ -462,7 +462,7 @@
                     </div>
                   </div>
                   <a class="blog-card__link button" href="/">
-                    <span class="icon icon--yellow-arrow">Посмотреть блог</span>
+                    <span class="icon icon--yellow-arrow">Перейти в блог</span>
                   </a>
                 </article>
               </li>
@@ -538,8 +538,8 @@
                       </ul>
                     </div>
                   </div>
-                  <a class="blog-card__link button" href="/">
-                    <span class="icon icon--yellow-arrow">Посмотреть блог</span>
+                  <a class="blog-card__link button" href="./blog.html">
+                    <span class="icon icon--yellow-arrow">Перейти в блог</span>
                   </a>
                 </article>
               </li>
@@ -615,8 +615,8 @@
                       </ul>
                     </div>
                   </div>
-                  <a class="blog-card__link button" href="/">
-                    <span class="icon icon--yellow-arrow">Посмотреть блог</span>
+                  <a class="blog-card__link button" href="./blog.html">
+                    <span class="icon icon--yellow-arrow">Перейти в блог</span>
                   </a>
                 </article>
               </li>
