--- a/frontend/post.html
+++ b/frontend/post.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Статья</title>
   <link rel="stylesheet" href="./styles/main.css" />
-  <link rel="icon" href="/frontend/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
   <script src="./scripts/main.js" type="module"></script>
 </head>
 
@@ -32,17 +32,6 @@
           Войти
         </a>
       </div>
-      <!-- <button
-          class="header__burger-button burger-button visible-mobile"
-          type="button"
-          aria-label="Open menu"
-          title="Open menu"
-          data-js-header-burger-button
-        >
-          <span class="burger-button__line"></span>
-          <span class="burger-button__line"></span>
-          <span class="burger-button__line"></span>
-        </button> -->
     </div>
   </header>
 
