--- a/frontend/register.html
+++ b/frontend/register.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Регистрация</title>
   <link rel="stylesheet" href="./styles/main.css" />
-  <link rel="icon" href="/frontend/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
   <script src="./scripts/main.js" type="module"></script>
 </head>
 
@@ -51,52 +51,23 @@
       <div class="tile" style="max-width: 480px; margin: 0 auto;">
         <h1 class="h3" style="text-align: center; margin-bottom: 2rem;">Создание аккаунта</h1>
         <form class="feedback-form" id="registerForm">
-          <div class="field feedback-form__cell--wide">
-            <label for="name">Полное имя</label>
-            <div class="field__body">
-              <input
-                type="text"
-                id="fullName"
-                name="fullName"
-                class="field__control"
-                placeholder="Введите имя"
-                required
-              />
-            </div>
+          <div class="feedback-form__cell field">
+            <label class="field__label" for="fullName">Полное имя <span class="field__required-star">*</span></label>
+            <input type="text" id="fullName" name="fullName" class="field__control" placeholder="Введите имя" required />
           </div>
 
-          <div class="field feedback-form__cell--wide">
-            <label for="email">E-Mail</label>
-            <div class="field__body">
-              <input
-                type="email"
-                id="email"
-                name="email"
-                class="field__control"
-                placeholder="Введите email"
-                required
-              />
-            </div>
+          <div class="feedback-form__cell field">
+            <label class="field__label" for="email">E-Mail <span class="field__required-star">*</span></label>
+            <input type="email" id="email" name="email" class="field__control" placeholder="Введите email" required />
           </div>
 
-          <div class="field feedback-form__cell--wide">
-            <label for="password">Пароль</label>
-            <div class="field__body">
-              <input
-                type="password"
-                id="password"
-                name="password"
-                class="field__control"
-                placeholder="Введите пароль"
-                required
-              />
-            </div>
+          <div class="feedback-form__cell field">
+            <label class="field__label" for="password">Пароль <span class="field__required-star">*</span></label>
+            <input type="password" id="password" name="password" class="field__control" placeholder="Введите пароль" required />
           </div>
 
           <div class="feedback-form__cell--wide">
-            <button type="submit" class="button button--accent" style="width: 100%;">
-              Зарегистрироваться
-            </button>
+            <button type="submit" class="button button--accent" style="width: 100%;">Зарегистрироваться</button>
           </div>
         </form>
       </div>
