--- a/frontend/resources.html
+++ b/frontend/resources.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Ресурсы | Xpage</title>
   <link rel="stylesheet" href="./styles/main.css" />
-  <link rel="icon" href="/frontend/images/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="./images/favicon.ico" type="image/x-icon">
   <script src="./scripts/main.js" type="module"></script>
 </head>
 <body>
